--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ aside {
     background-color: white;
     margin-left: 80px;
     border-radius: 32px;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, .1);
 }
 
 #asideImg {
