adicionar overflow auto para o resultado não quebrar a div

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ aside {
     line-height: 1.5;
     color: var(--gray-400);
     word-wrap: break-word;
+    overflow: auto;
 }
 
 #resultContainer__button__copy {
