alterar elemento do resultado p para textarea, melhorando a experiencia do usuario

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,8 @@ aside {
 
 #result {
     height: 80%;
+    resize: none;
+    border: none;
     font-size: 24px;
     line-height: 1.5;
     color: var(--gray-400);
